# chiaro-oscuro

./: .actrc  .gitignore  .yamllint.yml  CLAUDE.md  README.md  action.yml  debug-action.yml  debug_logo_response.txt  pyproject.toml  test_external_repo.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  test-external.yml  test-logo-generation.yml
prompts/: generate-logo.txt
src/: __init__.py  process_logos_llm.py  utils.py
tests/: test_basic.py  test_functions.py
